--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "wp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "vue-cli-template-webpack",
+  "version": "2.0.0",
+  "license": "MIT",
+  "description": "A full-featured Webpack setup with hot-reload, lint-on-save, unit testing & css extraction.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline --open --content-base public",
-    "build": "webpack"
+    "docs": "cd docs && gitbook serve",
+    "docs:deploy": "bash ./deploy-docs.sh"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+  "devDependencies": {
+    "vue-cli": "^2.8.1"
   }
 }
